# gvsbuild

./: .gitignore  .pre-commit-config.yaml  README.md  cspell.config.yaml  pyproject.toml
.github/config/: gvsbuild.dict
.github/workflows/: ci.yml  release-drafter.yml
gvsbuild/: build.py  list.py
gvsbuild/patches/gettext/nmake/: create-lists-msvc.mak  create-lists.bat
gvsbuild/utils/: base_expanders.py  base_project.py  base_tool.py  builder.py  simple_ui.py
tests/: test_build.py  test_outdated.py
