[project]
name = "gvsbuild"
version = "2024.9.0"
description = "GTK stack for Windows"
authors = [
    { name = "Ignacio Casal Quinteiro", email = "qignacio@amazon.com" },
    { name = "Dan Yeaw", email = "dan@yeaw.me" },
]
# license = "GPL"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Build Tools",
    "Environment :: X11 Applications :: GTK",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "build>=1.2.2",
    "lastversion>=3.5.6",
    "packaging>=24.1",
    "typer>=0.12.5",
    "setuptools>=75.1.0",
]

[project.scripts]
gvsbuild = 'gvsbuild.main:run'

[[tool.mypy.overrides]]
module = "lastversion"
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{38,39,310,311,312}

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
commands = pytest
deps = pytest
"""

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# These directories are not visited by pytest collector
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]
doctest_optionflags = [
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
testpaths = ["tests"]
# Extra options:
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B", "B9", "C", "E", "F", "W"]
extend-select = ["I"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.rye]
managed = true
universal = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "tox>=4.19.0",
    "ruff>=0.6.5",
    "pylint>=3.2.7",
    "mypy>=1.11.2",
    "pyright>=1.1.380",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gvsbuild"]
