[project]
name = "gvsbuild"
version = "2024.9.0"
description = "GTK stack for Windows"
authors = [
    { name = "Ignacio Casal Quinteiro", email = "qignacio@amazon.com" },
    { name = "Dan Yeaw", email = "dan@yeaw.me" },
]
license = { file = "COPYING" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Build Tools",
    "Environment :: X11 Applications :: GTK",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "build>=1.2.2",
    "lastversion>=3.5.6",
    "packaging>=24.1",
    "typer>=0.12.5",
    "setuptools>=75.1.0",
    "pip>=24.2",
]
requires-python = ">=3.9"

[project.scripts]
gvsbuild = 'gvsbuild.main:run'

[[tool.mypy.overrides]]
module = "lastversion"
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{39,310,311,312}

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
commands = pytest
deps = pytest
"""

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# These directories are not visited by pytest collector
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]
doctest_optionflags = [
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
addopts = [
    "--show-capture=all",
    "--strict-markers",
    "--log-level=DEBUG",
    "--tb=auto",
    "--showlocals",
    "--verbose",
    "--full-trace",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B", "B9", "C", "E", "F", "W"]
extend-select = ["I"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.rye]
managed = true
universal = true
dev-dependencies = [
    "pre-commit>=3",
    "pytest>=8",
    "tox>=4",
    "ruff>=0.6",
    "pylint>=3",
    "mypy>=1",
    "pyright>=1",
    "isort>=5",
    "tox-gh-actions>=3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gvsbuild"]
