[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gvsbuild"]

[project]
name = "gvsbuild"
version = "2025.1.0"
description = "GTK stack for Windows"
license = { file = "COPYING" }
readme = "README.md"
requires-python = "<4.0,>=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "lastversion>=3.5.6",
    "packaging>=24.1",
    "pip>=24.2",
    "build >=0.9,<1.3",
    "typer >=0.6.1,<0.16.0",
    "setuptools >=69.2,<76.0; python_version >= \"3.12\"",
]
dynamic = []

[[project.authors]]
name = "Ignacio Casal Quinteiro"
email = "qignacio@amazon.com"

[[project.authors]]
name = "Dan Yeaw"
email = "dan@yeaw.me"

[project.scripts]
gvsbuild = "gvsbuild.main:run"

[project.optional-dependencies]
outdated = [
    "lastversion >=2.4.2,<4.0.0",
    "packaging >=21.3,<25.0",
]

[dependency-groups]
dev = [
     "isort>=5",
     "mypy>=1",
     "pre-commit>=3",
     "pylint>=3",
     "pyright>=1",
     "pytest>=8",
     "ruff>=0.9.5",
     "tox-gh-actions>=3",
     "tox>=4",
]

[tool.uv]
managed = true
link-mode = "copy"

[tool.uv.pip]
universal = true

[[tool.mypy.overrides]]
module = "lastversion"
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{39,310,311,312}

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
commands = pytest
deps = pytest
"""

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# These directories are not visited by pytest collector
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]
doctest_optionflags = [
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
addopts = [
    "--show-capture=all",
    "--strict-markers",
    "--log-level=DEBUG",
    "--tb=auto",
    "--showlocals",
    "--verbose",
    "--full-trace",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "B",
    "B9",
    "C",
    "E",
    "F",
    "UP",
    "W",
]
extend-select = ["I"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]
